k8s/apps/vod-arr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: radarr
    app.kubernetes.io/part-of: radarr
    app.kubernetes.io/version: 6.4.2
  name: radarr
spec:
  ports:
    - name: http
      port: 7878
      protocol: TCP
      targetPort: http
    - name: metrics
      port: 9708
      protocol: TCP
      targetPort: metrics
  selector:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: radarr
      app.kubernetes.io/part-of: radarr
  sessionAffinity: None
  type: ClusterIP
